Knife Project Crashes Blender #48012

Closed
opened 2016-03-31 00:29:36 +02:00 by Carlo Andreacchio · 13 comments

System Information
Windows 7 x64 GTX580

Blender Version
Broken: 2.77 b0a7e77
Worked: 2.75 7ae44e8

Short description of error
Knife project in some cases crashes blender

Exact steps for others to reproduce the error

  1. open attached blend file
  2. knife project
  3. notice crash

crash.blend

**System Information** Windows 7 x64 GTX580 **Blender Version** Broken: 2.77 b0a7e77 Worked: 2.75 7ae44e8 **Short description of error** Knife project in some cases crashes blender **Exact steps for others to reproduce the error** 1. open attached blend file 2. knife project 3. notice crash [crash.blend](https://archive.blender.org/developer/F299653/crash.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Added subscriber: @sindra1961

Added subscriber: @sindra1961

I can not reproduce this here.

crash.png

Windows 10 Pro 64bits

I can not reproduce this here. ![crash.png](https://archive.blender.org/developer/F299670/crash.png) Windows 10 Pro 64bits

Changing the camera view makes it work... leaving it zoomed in crashes it on my computer.

Did you follow the steps exactly or did you orbit / zoom before knife projecting?

Changing the camera view makes it work... leaving it zoomed in crashes it on my computer. Did you follow the steps exactly or did you orbit / zoom before knife projecting?

No, I do not change camera view.
I changed view to show a result and took a snapshot.

No, I do not change camera view. I changed view to show a result and took a snapshot.

interesting.....

I am going to try on different drivers and see if that makes a difference

interesting..... I am going to try on different drivers and see if that makes a difference

Hmmm....

Drivers 364.51 crashes with a gtx580
Drivers 332.21 doesnt crash with a gtx590 (different computer, pretty similar setup)

Hmmm.... Drivers 364.51 crashes with a gtx580 Drivers 332.21 doesnt crash with a gtx590 (different computer, pretty similar setup)

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I could reproduce the bug.
It seems that the problem is in function bmesh_disk_facevert_count.
Within it, the bmesh_disk_edge_next(e_iter, v) is returning NULL when it should not.
Now just need to know why.

I could reproduce the bug. It seems that the problem is in function `bmesh_disk_facevert_count`. Within it, the `bmesh_disk_edge_next(e_iter, v)` is returning NULL when it should not. Now just need to know why.
Campbell Barton self-assigned this 2016-03-31 07:04:23 +02:00

Will look into this tomorrow (should be fixed for 2.77a)

Will look into this tomorrow (should be fixed for 2.77a)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 83b5f0268e

This issue was referenced by 83b5f0268ef766ccc97c89cc6efe2b8a95f7dddc
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48012
No description provided.