Fix T48012: Knife Project crash